--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ div.background {
     box-shadow: 2px 2px 15px 0 rgb(135 135 135 / 40%);
     padding: 3rem;
     position: relative;
+    max-width: 550px;
 }
 
 div.background h4 {
